fix: 765 - fix menu item underline and gap

--- a/src/widgets/header/header.module.scss
+++ b/src/widgets/header/header.module.scss
@@ -43,7 +43,7 @@
   position: relative;
 
   display: flex;
-  gap: 36.8px;
+  gap: 33.8px;
   align-items: center;
 
   height: 100%;
