--- a/src/widgets/header/ui/nav-item/nav-item.module.scss
+++ b/src/widgets/header/ui/nav-item/nav-item.module.scss
@@ -13,6 +13,7 @@
 
   height: 100%;
   padding: 0;
+  padding-left: 3px;
   border: none;
 
   background: none;
